--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,7 @@
+boto==2.40.0
+publicsuffixlist==0.4.0
+requests==2.20.0
+trackingprotection_tools==0.4.6
+packaging==19.2
 setuptools==40.8.0
 pytest==4.6.9
