--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,4 +15,9 @@ jobs:
           name: Run unit tests
           command: |
             source ~/venv/bin/activate
-            python -m pytest -vv
+            mkdir test-results
+            python -m pytest -v --junitxml=test-results/junit.xml
+      - store_test_results:
+              path: test-results
+      - store_artifacts:
+              path: test-results
