--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,12 +5,18 @@ jobs:
       - image: circleci/python:2.7
     steps:
       - checkout
+      - restore_cache:
+          key: deps1-{{ .Branch }}-{{ checksum "requirements.txt" }}
       - run:
           name: Install dependencies in virtual environment
           command: |
             virtualenv ~/venv
             source ~/venv/bin/activate
             pip install -r requirements.txt
+      - save_cache:
+          key: deps1-{{ .Branch }}-{{ checksum "requirements.txt" }}
+          paths:
+            - "~/venv"
       - run:
           name: Run unit tests
           command: |
