--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,15 +6,15 @@ jobs:
     steps:
       - checkout
       - restore_cache:
-          key: deps1-{{ .Branch }}-{{ checksum "requirements.txt" }}
+          key: deps1-{{ .Branch }}-{{ checksum "requirements.txt" }}-{{ checksum "requirements-dev.txt" }}
       - run:
           name: Install dependencies in virtual environment
           command: |
             virtualenv ~/venv
             source ~/venv/bin/activate
-            pip install -r requirements.txt
+            pip install -r requirements-dev.txt
       - save_cache:
-          key: deps1-{{ .Branch }}-{{ checksum "requirements.txt" }}
+          key: deps1-{{ .Branch }}-{{ checksum "requirements.txt" }}-{{ checksum "requirements-dev.txt" }}
           paths:
             - "~/venv"
       - run:
@@ -22,8 +22,12 @@ jobs:
           command: |
             source ~/venv/bin/activate
             mkdir test-results
-            python -m pytest -v --junitxml=test-results/junit.xml
+            coverage run --source=. -m pytest -v --junitxml=test-results/junit.xml
+            coverage report
+            coverage html
       - store_test_results:
               path: test-results
       - store_artifacts:
               path: test-results
+      - store_artifacts:
+              path: htmlcov
