Upload artifacts with multiple paths

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,6 +28,6 @@ jobs:
       - store_test_results:
               path: test-results
       - store_artifacts:
-              path: test-results
-      - store_artifacts:
-              path: htmlcov
+              paths: 
+                - test-results
+                - htmlcov
