Remove branch coverage measurement

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,9 +22,9 @@ jobs:
           command: |
             source ~/venv/bin/activate
             mkdir test-results
-            python -m pytest -v --junitxml=test-results/junit.xml --cov=. --cov-report=xml --cov-branch
+            python -m pytest -v --junitxml=test-results/junit.xml --cov=. --cov-report=xml
       - run:
-          name: Upload coverage report
+          name: Upload coverage report to Codecov
           command: bash <(curl -s https://codecov.io/bash)
       - store_test_results:
               path: test-results
