Reenable branch coverage measurement

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,7 +22,7 @@ jobs:
           command: |
             source ~/venv/bin/activate
             mkdir test-results
-            python -m pytest -v --junitxml=test-results/junit.xml --cov=. --cov-report=xml
+            python -m pytest -v --junitxml=test-results/junit.xml --cov=. --cov-report=xml --cov-branch
       - run:
           name: Upload coverage report to Codecov
           command: bash <(curl -s https://codecov.io/bash)
