--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,6 +13,7 @@ jobs:
             virtualenv ~/venv
             source ~/venv/bin/activate
             pip install -r requirements-dev.txt
+            pip install coverage-badge
       - save_cache:
           key: deps1-{{ .Branch }}-{{ checksum "requirements.txt" }}-{{ checksum "requirements-dev.txt" }}
           paths:
@@ -23,7 +24,10 @@ jobs:
             source ~/venv/bin/activate
             mkdir test-results
             python -m pytest -v --junitxml=test-results/junit.xml --cov=. --cov-report=html --cov-branch
+            coverage-badge -o coverage.svg
       - store_test_results:
               path: test-results
       - store_artifacts:
               path: htmlcov
+      - store_artifacts:
+              path: coverage.svg
